<resources>
    <string name="app_name">task_4_2_contacts</string>
    <string name="searchContacts">Search contacts</string>
    <string name="noContacts">No contacts. Please add</string>
    <string name="addContact">Add contact</string>
    <string name="arrowButton">arrow buton</string>
    <string name="checkButton">check button</string>
    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="editContact">Edit contact</string>
    <string name="remove">Remove</string>
</resources>