<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearAdd"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/shadow_rect"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backToContactsBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@color/invisible"
            android:contentDescription="@string/arrowButton"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="@string/addContact"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/saveContactBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="110dp"
            android:background="@color/invisible"
            android:contentDescription="@string/checkButton"
            android:src="@drawable/ic_check" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAdd">

        <RadioButton
            android:id="@+id/phoneRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:checked="true"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/emailRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        />

    <EditText
        android:id="@+id/contactInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/phoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        />


</androidx.constraintlayout.widget.ConstraintLayout>